--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>2.1.5</version>
         </dependency>
+
+        <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+               </dependency>
         <!-- Spring Boot Admin End -->
     </dependencies>
 
